# airport

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  main.cpp
Geometry/: CMakeLists.txt
Geometry/Geometry/: BoundingBox.cpp  BoundingBox.h  Point.cpp  Point.h  Segment.cpp  Segment.h  Utils.cpp  algorithm.cpp  algorithm.h
test/: BoundingBox.test.cpp  CMakeLists.txt  algorithm.test.cpp  basic.cpp  basic.test.cpp
